JBTM-1069 update to work with jboss-as 7.1.1.Final